--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "firebase": "^9.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.1.7",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "web-vitals": "2.1.4"
