--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "firebase": "^9.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-persist": "^1.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
