--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +24,7 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "^1.57.1",
+    "stripe": "^11.9.1",
     "styled-components": "^5.3.6",
     "web-vitals": "2.1.4"
   },
