--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "@types/styled-components": "^5.1.26",
+    "bootstrap-icons": "^1.10.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "netlify-cli": "^12.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-persist": "^1.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
